pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidBytes4.pkl
res = List(1, 2, 3, 0xffff).toBytes()
